# crd-promo-crawler

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  scraper.py
.claude/skills/cartographer/: SKILL.md
.claude/skills/cartographer/references/: contributor_guide_template.md  excalidraw_template.json
.claude/skills/cartographer/scripts/: map_dependencies.py
.claude/skills/dev/: SKILL.md
.claude/skills/dev/references/: component_template.md  httpx_patterns.md  llm_integration.md
.claude/skills/reviewer/: SKILL.md
.claude/skills/reviewer/references/: security_checklist.md
.claude/skills/tester/: SKILL.md
.claude/skills/tester/references/: html_fixtures.md
config/: banks.json
docs/diagrams/: README.md  architecture.excalidraw
migrations/: alembic.ini
migrations/alembic/: env.py
migrations/alembic/versions/: 001_initial_schema.py
monitoring/: otel-collector-config.yaml  prometheus.yml
monitoring/grafana/dashboards/: infrastructure.json  pipeline-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
scripts/: export_deals_json.py  seed.py
services/api/: Dockerfile  pyproject.toml
services/api/api/: config.py  main.py  schemas.py
services/api/api/routes/: deals.py  health.py
services/api/static/: index.html
services/api/static/css/: styles.css
services/api/static/js/: api.js  app.js  components.js
services/crawler/: Dockerfile  pyproject.toml
services/crawler/crawler/: config.py  fetcher.py  main.py  rate_limiter.py
services/extractor/: Dockerfile  pyproject.toml
services/extractor/extractor/: config.py  extract.py  main.py  prompts.py  store.py
services/parser/: Dockerfile  pyproject.toml
services/parser/parser/: config.py  html_parser.py  link_filter.py  main.py  relevance.py
services/puppeteer/: Dockerfile  package.json  server.js
shared/: pyproject.toml
shared/shared/: __init__.py  config.py  db.py  dedup.py  llm_client.py  minio_client.py  models.py  queue.py  redis_client.py  telemetry.py
