[project]
name = "crd-promo-crawler"
version = "0.1.0"
description = "Card Promotions Data Crawler — crawls bank websites for credit card deals"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/*/tests", "shared/tests", "tests"]
markers = [
    "integration: requires real Docker services",
    "e2e: end-to-end across all services",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["shared", "services"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
