[project]
name = "shared"
version = "0.1.0"
description = "Shared libraries for the Card Promotions Crawler"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "redis[hiredis]>=5.0,<6.0",
    "miniopy-async>=1.0,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
include = ["shared*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
