[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parser"
version = "0.1.0"
description = "Parser service for Card Promotions Data Crawler"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx>=0.25.0",
    "shared",
]

[tool.setuptools]
packages = ["parser"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
